--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,3 +6,31 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = { version = "0.6.20", features = [
+    "ws",
+    "headers",
+    "http2",
+    "macros",
+    "multipart",
+    "tracing",
+] }
+chrono = { version = "0.4.31", features = ["serde"] }
+env_logger = "0.11.3"
+log = "0.4.21"
+rand = "0.8.5"
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.114"
+tokio = { version = "1.36.0", features = ["full"] }
+
+clap = { version = "4.4.14", features = ["derive"] }
+tower = { version = "0.4", features = ["util"] }
+tower-http = { version = "0.4.0", features = ["fs", "trace"] }
+futures = "0.3.28"
+hyper = "0.14.27"
+
+tracing = "0.1.37"
+tracing-subscriber = { version = "0.3.17", features = [
+    "serde",
+    "serde_json",
+    "env-filter",
+] }
